@@ -289,6 +289,7 @@ HC  94- new GP function polylogmult
     97- [libpari] Z_factor_limit_strict
     98- [libpari] Idealstarmod, ZV_snf_gcd, ideallog_units0
 BA  99- [libpari] FqC_FqV_mul
+   100- [libpari] gen_sort_shallow
 
   Removed
      1- obsolete function rootsof1_kannan: use nfrootsof1
